fix: select arrow z-index

--- a/src/components/sections/PlansShelf/plans-shelf.scss
+++ b/src/components/sections/PlansShelf/plans-shelf.scss
@@ -52,7 +52,7 @@
         position: absolute;
         right: 15px;
         right: 30px;
-        z-index: 99999;
+        z-index: 2;
         pointer-events: none;
         content: url("data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iMTQiIGhlaWdodD0iOCIgdmlld0JveD0iMCAwIDE0IDgiIGZpbGw9Im5vbmUiIHhtbG5zPSJodHRwOi8vd3d3LnczLm9yZy8yMDAwL3N2ZyI+CjxwYXRoIGQ9Ik0xIDFMNyA3TDEzIDEiIHN0cm9rZT0iIzAwNEU5OCIgc3Ryb2tlLXdpZHRoPSIxLjc1IiBzdHJva2UtbGluZWNhcD0icm91bmQiIHN0cm9rZS1saW5lam9pbj0icm91bmQiLz4KPC9zdmc+Cg==");
       }
